edited footer code

--- a/contact.html
+++ b/contact.html
@@ -54,9 +54,10 @@
             </div>
         </section>
     </div>
+
     <footer>
         <div class="container">
-            <p>Copyright &copy; 2021 Ali Rajabli</p>
+            Copyright &copy; 2021 Ali Rajabli
         </div>
     </footer>
 </body>
