--- a/portfolio.html
+++ b/portfolio.html
@@ -22,10 +22,9 @@
     </header>
     <div id="main-container-portfolio" class="container-portf">
         <p id="portf">Coming Soon!</p>
-
-
     </div>
-    <footer id="port-foot">
+
+    <footer>
         <div class="container">
             Copyright &copy; 2021 Ali Rajabli
         </div>
