--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<body id="body-contact">
+<body>
     <header id="masthead">
-        <div class="container" id="container-head">
+        <div id="container-head" class="container">
             <a href="index.html" id="logo">Ali Rajabli</a>
             <nav>
                 <a href="about.html">About</a>
