--- a/portfolio.html
+++ b/portfolio.html
@@ -21,14 +21,10 @@
             </nav>
         </div>
     </header>
-    <div id="main-container-portfolio" class="container-portf">
-        <p id="portf">Coming Soon!</p>
-    </div>
+    <p id="portfolio">Coming Soon!</p>
 
     <footer>
-        <div class="container">
-            Copyright &copy; 2021 Ali Rajabli
-        </div>
+        Copyright &copy; 2021 Ali Rajabli
     </footer>
 </body>
 
